CHANGELOG
--------------------------

ClanSphere 2010.2.1 >> 2011-XX-XX
___________________________________________________________

-- Recommended PHP version changed to 5.3.5

>> Security: Fixed xss possibility in url abcode tag (schiri)

-> Added database subtype support to switch between MySQL storage engines (hajo)
-> Fixed abcode create to work again and to remember input (hajo)
-> Fixed escaping in static pages with rte_html turned on, e.g. ckeditor (hajo)
-> Reworked board toplist, stats, navtop and navtop2 to not cause heavy sql server load (hajo)
-> Updated CKEditor to 3.4.3 (hajo)

-- Fixed a few bugs that were reported at "Trac" --


ClanSphere 2010.2 >> 2010-12-03
___________________________________________________________

-> Added cache clearing to admin pages for languages, modules, themes and templates (hajo)
   By using them new content is no longer hidden until the full cache is cleared
-> Added simple database integrity check to database mod (hajo)
-> Added template placeholder {func:path} that does what {page:path} is for themes (hajo)
-> Changed cookie to be valid in multiple places at a time again (hajo)
-> Changed mods/.htaccess content to be deactivated by default as it caused problems (hajo)
-> Fixed PHP 4 error page introduced with last release to output its results (hajo)
-> Fixed caching mode 'none' to work as expected (hajo)
-> Fixed clansphere update check to work again (hajo)
-> Updated jQuery to 1.4.4 (hajo)

-- Fixed a few bugs that were reported at "Trac" --


ClanSphere 2010.1 >> 2010-11-15
___________________________________________________________

>> Security: Fixed possible sql injection in replays mod
>> Security: Fixed possible xss in abcode using nested tags
>> Security: Fixed possible xss in gallery print page urls
>> Security: Path disclosure in mods dir is no longer possible on apache servers

-> Added class "noexpand" for textareas to exclude them from the autoexpander (x-ray)