@@ -9,6 +9,7 @@ ___________________________________________________________
 >> Security: Fixed xss possibility in url abcode tag (schiri)
 
 -> Added database subtype support to switch between MySQL storage engines (hajo)
+-> Added new optional theme placeholder page:template that contains the directory of the default template (hajo)
 -> Fixed abcode create to work again and to remember input (hajo)
 -> Fixed escaping in static pages with rte_html turned on, e.g. ckeditor (hajo)
 -> Reworked board toplist, stats, navtop and navtop2 to not cause heavy sql server load (hajo)
